--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "app": "vue-cli-service serve",
     "samuel": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "nodemon src/server/server.js"
   },
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "core-js": "^3.8.3",
+    "prisma": "^3.14.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
