--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^3.14.0",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "prisma": "^3.14.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
