--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "prisma": "^3.14.0",
